<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#F0FDF0"
    tools:context=".OrderSuccessful">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/outline_check_circle_24"
        android:padding="10dp"
        android:contentDescription="@string/confirm_order"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_confirm"
        android:textStyle="bold"
        android:textSize="30sp"
        android:typeface="serif"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ord_dec"
            android:textSize="14sp"
            android:padding="3dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/orderHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_history"
            android:textStyle="bold"
            android:textSize="14sp"
            android:padding="5dp"
            android:textColor="#05920C"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_delivery"
            android:textAlignment="center"
            android:textSize="15sp"
            android:padding="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/placedDate"
            android:textSize="15sp"
            android:padding="5dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtOrderTrack"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="5sp"
        android:textColor="#05920C"/>


</LinearLayout>